# stubdocify

./: README.md  pyproject.toml
stubdocify/: __init__.py
tests/: scratch.py
tests/data/package1/: find.py
tests/data/package1_stubs/: find.pyi
